added login example w/o auth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,14 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type='text/javascript' src="/javascripts/post.js"></script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <form>
+  username: <input type="text" id=username></br>
+  <input type="button" value="Login" onclick="javascript:post('/login', {user: $('#username').val()}, function f(data) { window.location.href = '/account'; })">
+
   </body>
 </html>
+
