Fixed user/character file bugs

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TITLE</title>
+    <title>A New MMORPG</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
