touch-up/fixes to login system

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>A New MMORPG</title>
+    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-  <%= name %> LOGGED IN
+  <%= username %> LOGGED IN
   <a href="/logout">logout</a>
   </body>
 </html>
