--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-  <%= username %> LOGGED IN
-  <a href="/logout">logout</a>
-  </body>
+<head>
+<title>A NEW MMO</title>
+<script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type='text/javascript' src="/javascripts/post.js"></script>
+</head>
+
+<body>
+<center>
+<div id="welcome" style="width:300px;height:200px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid purple;background-color:yellow;" class="box">
+	<b><div id="welcometext" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid purple;background-color:lightpink" class="message"></div></b>
+	<center>
+		<form>
+            Start Playing</br>
+            <a href="/play">Play</a> </br>
+            Select Character:</br>
+            <select id="charselect">
+            <% for(var i = 0; i < characters.length; i++) { %>
+            <option value=<%= characters[i].id %>> <%= characters[i].name %> </option>
+            <% }  %>
+            </select>
+            <input id="choose" type="button" value="Select Character" onclick="javascript:post('/select_character', {character: parseInt($('#charselect').val())}, function f(data) { window.location.href = '/account'; })"></br>
+            Create New Character:</br>
+            Name:<input id="name" type="text">
+            <input id="create" type="button" value="Create Character"  onclick="javascript:post('/create_character', {name: $('#name').val()}, function f(data) { window.location.href = '/account'; })"></br>
+	    <a href="/logout">Logout</a>
+		</form>
+	</center>
+</div>
+
+</center>
+</body>
 </html>
 
