--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>A NEW MMO</title>
     <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type='text/javascript' src="/javascripts/post.js"></script>
   </head>
   <body>
+   
+  <center>
+  <h1>A NEW MMO</h1>
+<div id="login" style="width:300px;height:200px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid blue;background-color:lightgreen;" class="box">
+  <center>
+	<b><div id="logintext" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid blue;background-color:skyblue" class="message"></div></b>
   <form>
-  username: <input type="text" id=username></br>
-  password: <input type="password" id=password></br>
+  Username: <input type="text" id=username></br>
+  Password: <input type="password" id=password></br>
   <input type="button" value="Login" onclick="javascript:post('/login', {user: $('#username').val(), password: $('#password').val()}, function f(data) { window.location.href = '/account'; })">
   <input type="button" value="Register" onclick="javascript:post('/register', {user: $('#username').val(), password: $('#password').val()}, function f(data) { window.location.href = '/account'; })">
+  </center>
+  </div>
+  </center>
   </body>
 </html>
-
