--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,15 @@
     <script type='text/javascript' src="/javascripts/post.js"></script>
   </head>
   <body>
-  <form>
-  username: <input type="text" id=username></br>
-  password: <input type="password" id=password></br>
-  <input type="button" value="Login" onclick="javascript:post('/login', {user: $('#username').val(), password: $('#password').val()}, function f(data) { window.location.href = '/account'; })">
-  <input type="button" value="Register" onclick="javascript:post('/register', {user: $('#username').val(), password: $('#password').val()}, function f(data) { window.location.href = '/account'; })">
+    <div id="loginbox">
+    <h1>A New MMORPG!</h1>
+    <form>
+    username: <input id="username" type="text"></br>
+    password: <input id="password" type="password"></br>
+    <input id="loginbutton" type="button" value="Login" onclick="javascript:post('/login', {user: $('#username').val(), password: $('#password').val()}, function f(data) { window.location.href = '/account'; })">
+    <input id="registerbutton" type="button" value="Register" onclick="javascript:post('/register', {user: $('#username').val(), password: $('#password').val()}, function f(data) { window.location.href = '/account'; })">
+    </form>
+    </div>
   </body>
 </html>
 
