--- a/views/account.ejs
+++ b/views/account.ejs
@@ -8,26 +8,40 @@
 
 <body>
 <center>
-<div id="welcome" style="width:300px;height:200px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid purple;background-color:yellow;" class="box">
-	<b><div id="welcometext" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid purple;background-color:lightpink" class="message"></div></b>
-	<center>
-		<form>
-            Start Playing</br>
-            <a href="/play">Play</a> </br>
-            Select Character:</br>
-            <select id="charselect">
-            <% for(var i = 0; i < characters.length; i++) { %>
-            <option value=<%= characters[i].id %>> <%= characters[i].name %> </option>
-            <% }  %>
-            </select>
-            <input id="choose" type="button" value="Select Character" onclick="javascript:post('/select_character', {character: parseInt($('#charselect').val())}, function f(data) { window.location.href = '/account'; })"></br>
-            Create New Character:</br>
-            Name:<input id="name" type="text">
-            <input id="create" type="button" value="Create Character"  onclick="javascript:post('/create_character', {name: $('#name').val()}, function f(data) { window.location.href = '/account'; })"></br>
-	    <a href="/logout">Logout</a>
-		</form>
-	</center>
-</div>
+  <div id="welcome" style="width:300px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid purple;background-color:yellow;" class="box">
+    <div id="welcometext" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid purple;background-color:lightpink" class="message"><b>Welcome, <%= username %>!</b></div>
+    <center>
+      <form>
+
+	<p>
+          <u>Start Playing:</u></br>
+          <input id="choose" type="button" value="Play" onclick="window.location.href = '/play';">
+        </p>
+
+        <p>
+          <u>Select Character:</u></br>	
+          <select id="charselect" style="width: 200px">
+          <% for(var i = 0; i < characters.length; i++) { %>
+              <option value=<%= characters[i].id %>> <%= characters[i].name %> </option>
+          <% }  %>
+          </select>
+          <input id="choose" type="button" value="Select Character" onclick="javascript:post('/select_character', {character: parseInt($('#charselect').val())}, function f(data) { window.location.href = '/account'; })">
+        </p>
+
+        <p>
+          <u>Create New Character:</u></br>
+          Name: <input id="name" type="text" style="width: 150px">
+          <input id="create" type="button" value="Create Character"  onclick="javascript:post('/create_character', {name: $('#name').val()}, function f(data) { window.location.href = '/account'; })">
+        </p>
+
+        <p>
+          <u>Logout:</u></br>
+          <input id="choose" type="button" value="Logout" onclick="window.location.href = '/logout';">
+        </p>
+
+      </form>
+    </center>
+  </div>
 
 </center>
 </body>
