--- a/views/battleCommands.ejs
+++ b/views/battleCommands.ejs
@@ -10,6 +10,7 @@
       socket.on('start_battle', function (data) {
           var i = 1;
           var j = 1;
+          turnOrder = [];
           for (n in data[players]) {
               if (i == 1) {
                   player1 = n[name];
@@ -64,9 +65,9 @@
   <div id="battleCommands" style="width:500px;height:200px;border:5px solid black;" class="box">
     <div id="players" style="width:33%;border:1px solid black;float:left;">
         <div id="player1" style="height:25%" onclick="switchTarget('player1')">
-            <div id="player1name" style="width:50%">
+            <div id="player1name" style="width:50%;float:left;">
             </div>
-            <div id="player1stats" style="width:50%">
+            <div id="player1stats" style="width:50%;float:left;">
                 <div id="player1hp" style="height:33%">
                 </div>
                 <div id="player1mp" style="height:33%">
@@ -76,9 +77,9 @@
             </div>
         </div>
         <div id="player2" style="height:25%" onclick="switchTarget('player2')">
-            <div id="player2name" style="width:50%">
+            <div id="player2name" style="width:50%;float:left;">
             </div>
-            <div id="player2stats" style="width:50%">
+            <div id="player2stats" style="width:50%;float:left;">
                 <div id="player2hp" style="height:33%">
                 </div>
                 <div id="player2mp" style="height:33%">
@@ -88,9 +89,9 @@
             </div>
         </div>
         <div id="player3" style="height:25%" onclick="switchTarget('player3')">
-            <div id="player3name" style="width:50%">
+            <div id="player3name" style="width:50%;float:left;">
             </div>
-            <div id="player3stats" style="width:50%">
+            <div id="player3stats" style="width:50%;float:left;">
                 <div id="player3hp" style="height:33%">
                 </div>
                 <div id="player3mp" style="height:33%">
@@ -100,9 +101,9 @@
             </div>
         </div>
         <div id="player4" style="height:25%" onclick="switchTarget('player4')">
-            <div id="player4name" style="width:50%">
+            <div id="player4name" style="width:50%;float:left;">
             </div>
-            <div id="player4stats" style="width:50%">
+            <div id="player4stats" style="width:50%;float:left;">
                 <div id="player4hp" style="height:33%">
                 </div>
                 <div id="player4mp" style="height:33%">
@@ -113,7 +114,7 @@
         </div>
     </div>
     <div id="commands" style="width:32.8%;border:1px solid black;float:left;">
-        <div id="attack" style="height:20%" onclick="action('attack');">
+        <div id="attack" style="height:20%" onclick="action('attack')">
         Attack
         </div>
         <div id="skills" style="height:20%">
@@ -125,15 +126,15 @@
         <div id="defend" style="height:20%">
         Defend
         </div>
-        <div id="flee" style="height:20%" onclick="action('flee');">
+        <div id="flee" style="height:20%" onclick="action('flee')">
         Flee
         </div>
     </div>
     <div id="enemies" style="width:33%;border:1px solid black;float:left;">
         <div id="enemy1" style="height:25%" onclick="switchTarget('enemy1')">
-            <div id="enemy1name" style="width:50%">
+            <div id="enemy1name" style="width:50%;float:left;">
             </div>
-            <div id="enemy1stats" style="width:50%">
+            <div id="enemy1stats" style="width:50%;float:left;">
                 <div id="enemy1hp" style="height:50%">
                 </div>
                 <div id="enemy1condition" style="height:50%">
@@ -141,9 +142,9 @@
             </div>
         </div>
         <div id="enemy2" style="height:25%" onclick="switchTarget('enemy2')">
-            <div id="enemy2name" style="width:50%">
+            <div id="enemy2name" style="width:50%;float:left;">
             </div>
-            <div id="enemy2stats" style="width:50%">
+            <div id="enemy2stats" style="width:50%;float:left;">
                 <div id="enemy2hp" style="height:50%">
                 </div>
                 <div id="enemy2condition" style="height:50%">
@@ -151,9 +152,9 @@
             </div>
         </div>
         <div id="enemy3" style="height:25%" onclick="switchTarget('enemy3')">
-            <div id="enemy3name" style="width:50%">
+            <div id="enemy3name" style="width:50%;float:left;">
             </div>
-            <div id="enemy3stats" style="width:50%">
+            <div id="enemy3stats" style="width:50%;float:left;">
                 <div id="enemy3hp" style="height:50%">
                 </div>
                 <div id="enemy3condition" style="height:50%">
@@ -161,9 +162,9 @@
             </div>
         </div>
         <div id="enemy4" style="height:25%" onclick="switchTarget('enemy4')">
-            <div id="enemy4name" style="width:50%">
+            <div id="enemy4name" style="width:50%;float:left;">
             </div>
-            <div id="enemy4stats" style="width:50%">
+            <div id="enemy4stats" style="width:50%;float:left;">
                 <div id="enemy4hp" style="height:50%">
                 </div>
                 <div id="enemy4condition" style="height:50%">
@@ -174,11 +175,11 @@
   </div>
 
   <script>
-      var me = "";
-      var player1 = "";
-      var player1hp = "";
-      var player1mp = "";
-      var player1cond = "";
+      var me = "player1";
+      var player1 = "Player 1";
+      var player1hp = "HP:100/100";
+      var player1mp = "MP:100/100";
+      var player1cond = "GOOD";
       var player2 = "";
       var player2hp = "";
       var player2mp = "";
@@ -191,9 +192,9 @@
       var player4hp = "";
       var player4mp = "";
       var player4cond = "";
-      var enemy1 = "";
-      var enemy1hp = "";
-      var enemy1cond = "";
+      var enemy1 = "Enemy A";
+      var enemy1hp = "HP:50/50";
+      var enemy1cond = "POISON";
       var enemy2 = "";
       var enemy2hp = "";
       var enemy2cond = "";
@@ -204,8 +205,7 @@
       var enemy4hp = "";
       var enemy4cond = "";
       var target = "enemy1";
-      var turnOrder = [];
-      var yourTurn = false;
+      var turnOrder = ["player1", "enemy1"];
       var currentTurn = 0;
       $("#player1name").html(player1);
       $("#player1hp").html(player1hp);
@@ -241,14 +241,16 @@
           }
       };
       function applyDamage(damage) {
-          var hpLeft = parseInt($("#" + target + "hp").html()) - damage;
+          var hp = $("#" + target + "hp").html();
+          var hpmax = hp.match(/\/[0-9]+/)[0].slice(1);
+          var hpLeft = parseInt(hp.match(/:[0-9]+\//)[0].slice(1, -1)) - damage;
           if (hpLeft < 0) hpLeft = 0;
-          $("#" + target + "hp").html(hpLeft);
+          $("#" + target + "hp").html("HP:" + hpleft + "/" + hpmax);
       };
       function action(command) {
           if (turnOrder[currentTurn] == me) {
               if (command == "attack") {
-                  javascript: post('/attack', { 'monster': target }, function f(data) { applyDamage(data[damage]); });
+                  javascript:post('/attack', { 'monster': target }, function f(data) { applyDamage(data[damage]); });
               } else {
                   window.location.href = '/exit_battle';
               }
