--- a/views/play.ejs
+++ b/views/play.ejs
@@ -181,7 +181,8 @@
     <div id="menu">
       <form>
         <p>
-          <input id="choose" type="button" value="Logout" onclick="window.location.href ='/logout';">
+          <input id="battle" type="button" value="Battle" onclick="window.location.href ='/battle';">
+          <input id="logout" type="button" value="Logout" onclick="window.location.href ='/logout';">
         </p>
       </form>
     </div>
